tmp_test_helpers_pytest.txt

=================================== ERRORS ====================================
________________ ERROR collecting tests/utils/test_helpers.py _________________
.venv\Lib\site-packages\_pytest\python.py:498: in importtestmodule
    mod = import_path(
.venv\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Users\jacks\AppData\Local\Programs\Python\Python313\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1310: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:488: in _call_with_frames_removed
    ???
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
<frozen importlib._bootstrap_external>:1022: in exec_module
    ???
<frozen importlib._bootstrap_external>:1160: in get_code
    ???
<frozen importlib._bootstrap_external>:1090: in source_to_code
    ???
<frozen importlib._bootstrap>:488: in _call_with_frames_removed
    ???
E     File "C:\Dev\Gold3\tests\utils\__init__.py", line 1
E       """Module tests\utils\__init__.py
E       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
E   SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 12-13: truncated \uXXXX escape
=========================== short test summary info ===========================
ERROR tests/utils/test_helpers.py
!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
1 error in 0.48s
